[workspace]
members = [
    ".",
    "derive",
]

[package]
name = "knus"
version = "3.2.0"
edition = "2021"
description = """
    Another KDL language implementation
"""
license = "MIT/Apache-2.0"
keywords = ["kdl", "configuration", "parser"]
categories = ["parser-implementations", "config", "encoding"]
homepage = "https://github.com/TheLostLambda/knus"
documentation = "https://docs.rs/knus"
rust-version = "1.62.0"
readme = "README.md"

[dependencies]
chumsky = { version="0.9.3", default-features=false }
knus-derive = { path="./derive", version= "^3.2.0", optional=true }
base64 = { version="0.22.1", optional=true }
unicode-width = { version="0.2.0", optional=true }
minicbor = { version="0.25.1", optional=true, features=["std", "derive"] }
miette = "7.2.0"
thiserror = "1.0.65"

[dev-dependencies]
miette = { version="7.2.0", features=["fancy"] }
assert-json-diff = "2.0.2"
serde_json = "1.0"

[features]
default = ["derive", "base64", "line-numbers"]
derive = ["knus-derive"]
line-numbers = ["unicode-width"]
