[package]
name = "knus-derive"
version = "3.2.0"
edition = "2021"
description = """
    A derive implementation for knus KDL parser
"""
license = "MIT/Apache-2.0"
keywords = ["kdl", "configuration"]
homepage = "https://github.com/TheLostLambda/knus"
documentation = "https://docs.rs/knus"
readme = "README.md"

[lib]
proc_macro = true

[dependencies]
heck = {version="0.4.1", features=["unicode"]}
syn = {version="1.0.81", features=["full", "extra-traits"]}
quote = "1.0.10"
proc-macro2 = "1.0.32"
proc-macro-error = "1.0.4"

[dev-dependencies]
knus = { path=".." }
miette = { version="5.1.1", features=["fancy"] }
