[package]
name = "knus-derive"
version = "3.2.0"
edition = "2021"
description = """
    A derive implementation for knus KDL parser
"""
license = "MIT/Apache-2.0"
keywords = ["kdl", "configuration"]
homepage = "https://github.com/TheLostLambda/knus"
documentation = "https://docs.rs/knus"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
heck = { version="0.5.0" }
syn = { version="2.0.85", features=["full", "extra-traits"] }
quote = "1.0.37"
proc-macro2 = "1.0.89"
proc-macro-error2 = "2.0.1"

[dev-dependencies]
knus = { path=".." }
miette = { version="7.2.0", features=["fancy"] }
